added some style

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="index.css">
     <title>Alexander Loginov</title>
 </head>
 <body>
-    <p>
+    <div id="image">
+        <img src="my_photo.jpg" alt="My photo">
+    </div>
+    <div id="aboutme">
         <h1>About me</h1>
-        Born in Samara, Russia. During school I mostly played Civ 5 and watched anime.
-        Graduated from ITMO as a Software Engineer. Currently working on backend in <href>dzen.ru/news</href>
-    </p>
+        Born in Samara, Russia, living in Saint-Petersburg, Russia. During school I mostly played <a href="https://en.wikipedia.org/wiki/Civilization_V">Civ 5</a> and watched anime.<br>
+        Graduated from ITMO as a Software Engineer. Currently working on backend in <a href="https://dzen.ru/news">dzen.ru/news</a>
+    </div>
+    <div id="setup">
+        <h2>My favourite coding setup</h3>
+        <ul>
+            <li>Font mono - Monaco</li>
+            <li>Font size - 16px</li>
+            <li>Code Editor - <a href="https://code.visualstudio.com/">VS Code</a></li>
+            <li>Color Theme - <a href="https://vscodethemes.com/e/fisheva.eva-theme/eva-dark">Eva Theme</a></li>
+        </ul>
+    </div>
 </body>
 </html>
