some more modifications

--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="index.css">
-    <title>Alexander Loginov</title>
+    <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 <body>
-    <div id="image">
-        <img src="my_photo.jpg" alt="My photo">
+    <div class="header">
+        <img width="100%" src="./images/tbilisi_graffiti.jpg" />
+        <table width="100%">
+            <tr>
+                <td><a href="./index.html">Home</a></td>
+                <td><a href="./about.html">About Alex</a></td>
+                <td><a href="https://dzen.ru/news">My job site</a></td>
+            </tr>
+        </table>
+        <hr />
     </div>
-    <div id="aboutme">
-        <h1>About me</h1>
-        Born in Samara, Russia, living in Saint-Petersburg, Russia. During school I mostly played <a href="https://en.wikipedia.org/wiki/Civilization_V">Civ 5</a> and watched anime.<br>
-        Graduated from ITMO as a Software Engineer. Currently working on backend in <a href="https://dzen.ru/news">dzen.ru/news</a>
+    <div class="content">
+        <h1>Home page</h1>
     </div>
-    <div id="setup">
-        <h2>My favourite coding setup</h3>
-        <ul>
-            <li>Font mono - Monaco</li>
-            <li>Font size - 16px</li>
-            <li>Code Editor - <a href="https://code.visualstudio.com/">VS Code</a></li>
-            <li>Color Theme - <a href="https://vscodethemes.com/e/fisheva.eva-theme/eva-dark">Eva Theme</a></li>
-        </ul>
+    <div class="footer">
+        <hr />
+        <p>Copyright 2023-2023 Alexander Loginov. All Rights Reserved</p>
+        <hr />
     </div>
 </body>
 </html>
