fixed table content in about

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <table width="100%">
             <tr>
                 <td><a href="./index.html">Home</a></td>
-                <td><a href="./about_author.html">About Eric</a></td>
+                <td><a href="./about.html">About Alex</a></td>
                 <td><a href="https://dzen.ru/news">My job site</a></td>
             </tr>
         </table>
