added contacts page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <tr>
                 <td><a href="./index.html">Home</a></td>
                 <td><a href="./about.html">About Alex</a></td>
-                <td><a href="https://dzen.ru/news">My job site</a></td>
+                <td><a href="./contacts.html">Contact me</a></td>
+                <td><a href="https://dzen.ru/news" target="_blank">My current job site</a></td>
             </tr>
         </table>
         <hr />
