--- a/about.html
+++ b/about.html
@@ -15,19 +15,20 @@
             <tr>
                 <td><a href="./index.html">Home</a></td>
                 <td><a href="./about.html">About Alex</a></td>
-                <td><a href="https://dzen.ru/news">My job site</a></td>
+                <td><a href="./contacts.html">Contact me</a></td>
+                <td><a href="https://dzen.ru/news" target="_blank">My current job site</a></td>
             </tr>
         </table>
         <hr />
     </div>
     <div class="content">
         <h1>About Alexander Loginov</h1>
-        <img src="./images/my_photo.jpg" alt="My photo" align="left" width="20%" height="20%">
-        <br>
+        <img src="./images/my_photo.jpg" alt="My photo" align="left" width="15%">
         <p>I was born in Samara, Russia and living in Saint-Petersburg, Russia.</p>
         <p>During school I mostly played <a href="https://en.wikipedia.org/wiki/Civilization_V">Civ 5</a> and watched anime.<br></p>
-        <p>I hame a B.S. in Software Engineering from the <a href="https://en.itmo.ru/">ITMO University.</a></p>
-        <p>I am currently working as a backend developer in <a href="https://dzen.ru/news">dzen.ru/news</a></p>
+        <p>I have a B.S. in Software Engineering from the <a href="https://en.itmo.ru/">ITMO University.</a></p>
+        <p>You can check my <a href="https://github.com/Loganche" target="_blank">GitHub Page</a> to see some of my open-source projects.</p>
+        <p>I am currently working as a backend developer in <a href="https://dzen.ru/news" target="_blank">dzen.ru/news</a></p>
         <p>My favourite coding setup.</p>
         <ul class="setup">
             <li><p>Font mono - Monaco</p></li>
