fixed hrefs from about page

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
         <h1>About Alexander Loginov</h1>
         <img src="./images/my_photo.jpg" alt="My photo" align="left" width="15%">
         <p>I was born in Samara, Russia and living in Saint-Petersburg, Russia.</p>
-        <p>During school I mostly played <a href="https://en.wikipedia.org/wiki/Civilization_V">Civ 5</a> and watched anime.<br></p>
-        <p>I have a B.S. in Software Engineering from the <a href="https://en.itmo.ru/">ITMO University.</a></p>
+        <p>During school I mostly played <a href="https://en.wikipedia.org/wiki/Civilization_V"  target="_blank">Civ 5</a> and watched anime.<br></p>
+        <p>I have a B.S. in Software Engineering from the <a href="https://en.itmo.ru/"  target="_blank">ITMO University.</a></p>
         <p>You can check my <a href="https://github.com/Loganche" target="_blank">GitHub Page</a> to see some of my open-source projects.</p>
         <p>I am currently working as a backend developer in <a href="https://dzen.ru/news" target="_blank">dzen.ru/news</a></p>
         <p>My favourite coding setup.</p>
