--- a/404.html
+++ b/404.html
@@ -4,34 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
+    <meta http-equiv="refresh" content="0; url=http://lxndrloginov.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 
 <body>
-    <div class="header">
-        <img width="100%" src="./images/tbilisi_graffiti.jpg" />
-        <table width="100%">
-            <tr>
-                <td><a href="./index.html">Home</a></td>
-                <td><a href="./about.html">About Alex</a></td>
-                <td><a href="./contacts.html">Contact me</a></td>
-                <td><a href="https://dzen.ru/news" target="_blank">My current job site</a></td>
-            </tr>
-        </table>
-        <hr />
-    </div>
-    <div class="content">
-        <h1>404 Not Found</h1>
-        <p>Provided page does not exist.</p>
-    </div>
-    <div class="footer">
-        <hr />
-        <p>Copyright 2023-2023 Alexander Loginov. All Rights Reserved</p>
-        <hr />
-    </div>
+    <p><a href="http://lxndrloginov.com/">Redirect</a></p>
 </body>
 
 </html>
